Fixed some compiler warnings about using deprecated API.